Fixes error text overlapping form text

--- a/src/app/settings/projects/project-detail/project-alerts/project-alerts.component.scss
+++ b/src/app/settings/projects/project-detail/project-alerts/project-alerts.component.scss
@@ -34,7 +34,6 @@ mat-card-title {
 
 .new-alert-error {
   margin-top: -10px;
-  margin-bottom: -10px;
 }
 
 .new-alert-actions {
